@@ -10,5 +10,5 @@ start on mounted MOUNTPOINT=/dev TYPE=tmpfs
 task
 
 script
-  cp -a /lib/udev/devices/* "$MOUNTPOINT"
+  cp -a /lib/udev/devices/* "${MOUNTPOINT}"
 end script
