@@ -1,0 +1,21 @@
+# mounted-varrun - Populate /var/run filesystem
+#
+# Populates the /var/run filesystem, creating the empty utmp file,
+# initial motd and copying anything else from the initramfs.
+
+description	"Populate /var/run filesystem"
+
+start on mounted MOUNTPOINT=/var/run TYPE=tmpfs
+
+task
+
+script
+  : > "${MOUNTPOINT}/utmp"
+  chgrp utmp "${MOUNTPOINT}/utmp"
+
+  uname -a > "${MOUNTPOINT}/motd"
+  [ -f /etc/motd.tail ] && cat /etc/motd.tail >> "${MOUNTPOINT}/motd"
+
+  [ -d /dev/.initramfs/varrun ] && cp -a /dev/.initramfs/varrun/* "${MOUNTPOINT}"
+
+end script
