@@ -196,7 +196,6 @@ void   udev_monitor_watcher (struct udev_monitor *udev_monitor,
 void   udev_catchup         (void);
 
 int    tmp_hook             (Mount *mnt);
-int    var_run_hook         (Mount *mnt);
 
 void   usplash_write        (const char *format, ...);
 
@@ -2668,140 +2667,6 @@ tmp_hook (Mount *mnt)
 	nftw_hook_args.mnt = mnt;
 	nftw (mnt->mountpoint, tmp_hook_walk, 1024,
 	      FTW_ACTIONRETVAL | FTW_DEPTH | FTW_PHYS | FTW_MOUNT);
-	nftw_hook_args.mnt = NULL;
-
-	return 0;
-}
-
-
-static int
-var_run_hook_walk (const char *       fpath,
-		   const struct stat *sb,
-		   int                typeflag,
-		   struct FTW *       ftwbuf)
-{
-	Mount * mnt = nftw_hook_args.mnt;
-	char dest[PATH_MAX];
-
-	strcpy (dest, mnt->mountpoint);
-	strcat (dest, fpath + 22);
-
-	if (S_ISDIR (sb->st_mode)) {
-		if ((mkdir (dest, sb->st_mode & ~S_IFMT) < 0)
-		    && (errno != EEXIST))
-			nih_warn ("%s: %s", dest, strerror (errno));
-	} else if (S_ISLNK (sb->st_mode)) {
-		char target[PATH_MAX];
-		ssize_t len;
-
-		len = readlink (fpath, target, sizeof target);
-		target[len] = '\0';
-
-		if ((symlink (target, dest) < 0)
-		    && (errno != EEXIST))
-			nih_warn ("%s: %s", dest, strerror (errno));
-	} else {
-		int     in_fd;
-		int     out_fd;
-		char    buf[4096];
-		ssize_t len;
-
-		in_fd = open (fpath, O_RDONLY);
-		if (in_fd < 0) {
-			nih_warn ("%s: %s", fpath, strerror (errno));
-			return FTW_CONTINUE;
-		}
-
-		out_fd = open (dest, O_WRONLY | O_CREAT | O_TRUNC,
-			       0644);
-		if (out_fd < 0) {
-			nih_warn ("%s: %s", dest, strerror (errno));
-			close (in_fd);
-			return FTW_CONTINUE;
-		}
-
-		while ((len = read (in_fd, buf, sizeof buf)) > 0)
-			write (out_fd, buf, len);
-
-		close (in_fd);
-		if (close (out_fd) < 0)
-			nih_warn ("%s: %s", dest, strerror (errno));
-	}
-
-	return FTW_CONTINUE;
-}
-
-int
-var_run_hook (Mount *mnt)
-{
-	char  path[PATH_MAX];
-	int   fd;
-	FILE *fp;
-
-	nih_assert (mnt != NULL);
-
-	if (nih_main_write_pidfile (getpid ()) < 0) {
-		NihError *err;
-
-		err = nih_error_get ();
-		nih_warn ("%s: %s", nih_main_get_pidfile (), err->message);
-		nih_free (err);
-	}
-
-	nih_debug ("creating %s/utmp", mnt->mountpoint);
-
-	strcpy (path, mnt->mountpoint);
-	strcat (path, "/utmp");
-
-	if (((fd = open (path, O_WRONLY | O_CREAT | O_TRUNC, 0664)) < 0)
-	    || (close (fd) < 0)) {
-		nih_warn ("%s: %s", path, strerror (errno));
-	} else {
-		struct group *grp;
-
-		grp = getgrnam ("utmp");
-		if (grp)
-			chown (path, 0, grp->gr_gid);
-	}
-
-
-	nih_debug ("creating %s/motd", mnt->mountpoint);
-
-	strcpy (path, mnt->mountpoint);
-	strcat (path, "/motd");
-
-	fp = fopen (path, "w");
-	if (! fp) {
-		nih_warn ("%s: %s", path, strerror (errno));
-	} else {
-		struct utsname uts;
-
-		uname (&uts);
-		fprintf (fp, "%s %s %s %s %s\n",
-			 uts.sysname, uts.nodename, uts.release, uts.version,
-			 uts.machine);
-		fflush (fp);
-
-		if ((fd = open ("/etc/motd.tail", O_RDONLY)) >= 0) {
-			char    buf[4096];
-			ssize_t len;
-
-			while ((len = read (fd, buf, sizeof buf)) > 0)
-				write (fileno (fp), buf, len);
-
-			close (fd);
-		}
-
-		if (fclose (fp))
-			nih_warn ("%s: %s", path, strerror (errno));
-	}
-
-
-	nih_debug ("populating %s from initramfs", mnt->mountpoint);
-
-	nftw_hook_args.mnt = mnt;
-	nftw ("/dev/.initramfs/varrun", var_run_hook_walk, 1024,
-	      FTW_ACTIONRETVAL | FTW_PHYS | FTW_MOUNT);
 	nftw_hook_args.mnt = NULL;
 
 	return 0;
